acf-field-styles-enhanced.css
/* ... */
/* Taxonomy radio buttons/checkboxes in a horizontal row. */
.acf-field.__horizontal-list .acf-radio-list.acf-bl > li,
.acf-field.__horizontal-list .acf-checkbox-list.acf-bl > li {
  display: inline-block;

  & input {
    margin-right: 2px;
  }

  & + li {
    margin-left: 10px;
  }
}

/* To have a non-full-length field always clear float. */
.acf-field.__clear-float {
  clear: left !important;
}

/* To have a non-full-length field always clear float. Useful when combining */
/* conditional fields with percentage-width fields. */
.acf-field[data-width].__no-left-border {
  border-left: 0 !important;
}

/* Hidden labels. */
.acf-fields.-top .acf-field.__hide-label,
.acf-menu-item-fields .acf-field {
  /* Only for the topmost label in this field. */
  & > .acf-label {
    margin-bottom: 0;

    /* Hide label. */
    & label {
      display: none;
    }

    & p.description {
      /* Provide space between description/instructions and field below it. */
      margin-bottom: 12px;

      /* Still show field description/instructions. */
      margin-top: 0 !important;
    }
  }
}

.acf-fields.-left .acf-field.__hide-label {
  /* Remove false background and dividing line. */
  &::before {
    display: none !important;
  }

  /* Hide label. */
  & > .acf-label {
    margin-bottom: 0;

    & label {
      display: none;
    }
  }

  /* Make field now take up entire container. */
  & > .acf-input {
    width: 100% !important;
  }
}

/* If this is just a message meant to conditionally show up under a related */
/* field, and if field titles are on the left, then indent it and add the */
/* false background back in. */
.acf-fields.-left .acf-field.acf-field-message.__related.__hide-label {
  &::before {
    display: block !important;
  }

  & > .acf-input {
    float: right !important;
    width: 80% !important;
  }
}

/* Hidden labels in Gutenberg. */
.acf-block-component .acf-field.__hide-label {
  & > .acf-label {
    margin-bottom: 0;

    & label {
      display: none;
    }
  }
}

/* Hide the repeater field label but not any of its children field labels. */
.acf-field.__hide-repeater-label {
  /* Remove false background and dividing line. */
  &::before {
    display: none !important;
  }

  /* Hide label. */
  & > .acf-label {
    display: none;
  }

  /* Make field now take up entire container. */
  & > .acf-input {
    width: 100% !important;
  }
}

/* Add top padding if first field is conditionally hidden. */
.acf-field.acf-hidden:first-child + .acf-field.__related {
  padding-top: 12px !important;
}

/* Hide table header. */
.acf-field.__hide-table-header .-table thead {
  display: none;
}

/* Hide TinyMCE advanced in WYSIWYG editor. */
.acf-field.__hide-tinymce-advanced {
  & .mce-menubar[role="menubar"] {
    display: none;
  }
}

/* Reduce vertical padding around message fields. */
.acf-field.__reduce-message-padding {
  padding-bottom: 0 !important;
  padding-top: 0 !important;
}

/* No padding for groups or nested clones. */
.acf-field-group.__no-group-border-or-padding > .acf-input {
  & > .acf-fields {
    border: 0;
  }

  & > .acf-fields > .acf-field {
    padding: 12px 0;
  }

  & > .acf-fields > .acf-field:first-child {
    padding-top: 0;
  }
}

/* Fix styling of group headings in Gutenberg sidebar. */
.block-editor .edit-post-sidebar .acf-postbox h2.hndle {
  padding: 0 16px !important;
  font-size: 13px !important;
  font-weight: 500 !important;
}

/* No padding for groups in Gutenberg sidebar. */
.block-editor .edit-post-sidebar .acf-fields > .acf-field.__no-group-border-or-padding .acf-field {
  margin: 0;
}

/* Remove top margin for `__related` fields in Gutenberg sidebar. */
.block-editor .edit-post-sidebar .acf-fields > .acf-field.__related {
  margin-top: 0 !important;
}

/* Remove borders around lists in Gutenberg sidebar. */
.block-editor .edit-post-sidebar .acf-fields > .acf-field.__no-list-border {
  & .categorychecklist-holder {
    border: 0;
  }

  & .acf-checkbox-list {
    padding: 3px 0;
  }
}

/* No padding for groups in Gutenberg ACF blocks. */
.acf-field.__no-group-border-or-padding .acf-fields.-left > .acf-field > .acf-input {
  padding: 0;
}

/* Add some padding between fields that aren't full-width. */
.acf-field-group.__no-group-border-or-padding > .acf-input > .acf-fields > .acf-field[data-width] {
  border-left: 0;
  padding-right: 12px;
}

.acf-field-group.__no-group-border-or-padding > .acf-input > .acf-fields > .acf-field[data-width]:last-child {
  padding-right: 0;
}

/* Reduce right margin on horizontal list items. */
ul.acf-radio-list.acf-hl {
  & li {
    margin-right: 15px;
  }

  /* Remove right margin on final list item in horizontal lists. */
  & li:last-child {
    margin-right: 0;
  }
}

/* Hide unnecessary 'Alt Text' and 'Description' fields in gallery image editor. */
.acf-gallery-side-data tr[data-name="alt"],
.acf-gallery-side-data tr[data-name="description"] {
  display: none;
}

/* Formatting of paragraphs and more in field descriptions. */
.acf-field .acf-label {
  & p {
    margin-top: 6px !important;
  }

  & pre {
    background-color: #eee;
    border-radius: 5px;
    margin: 8px 0 15px 0;
    padding: 5px 10px;
  }
}

/* Move minus buttons to the top of the column. */
.acf-repeater .acf-row-handle .acf-icon.-minus {
  top: 30px !important;
}

/* If a group is used within a seamless box, enclose its title in a box so it */
/* looks like its own contained field group. */
.acf-postbox.seamless > .acf-fields > .acf-field-group > .acf-label {
  background: #fff;
  border-left: 1px solid var(--border-color);
  border-right: 1px solid var(--border-color);
  border-top: 1px solid var(--border-color);
  font-size: 14px;
  font-weight: bold;
  margin: 0;
  padding: 8px 12px 4px 12px;
}
/* ... */

